[gd_scene load_steps=3 format=3 uid="uid://46stq6gc8mcn"]

[ext_resource type="Script" path="res://scripts/message_box.gd" id="1_oomre"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_11xsp"]
bg_color = Color(0, 0, 0, 1)

[node name="MessageBox" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -225.0
offset_right = 150.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_11xsp")
script = ExtResource("1_oomre")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Text" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[center] VICTORY

No amount of hippie scientists and woke activist and lying media could stop you from ensuring your legacy for generations to come.

Sure the climate will be unstable for a time. But when it stabilizes in a hotter (maybe more rainy and windy) place you and your decendants are ready to take over!

The post climapocalyptic hellscape has a new king...

YOU!"

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LeftButton" type="Button" parent="VBoxContainer/Buttons"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "OK (close)"

[node name="CenterButton" type="Button" parent="VBoxContainer/Buttons"]
visible = false
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "OK (close)"

[node name="Restart game" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "OK (quit game)"

[node name="RightButton" type="Button" parent="VBoxContainer/Buttons"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "OK (close)"

[connection signal="pressed" from="VBoxContainer/Buttons/CenterButton" to="." method="_on_center_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Restart game" to="." method="_on_center_pressed"]
[connection signal="pressed" from="VBoxContainer/Buttons/Restart game" to="." method="_on_restart_game_pressed"]
